5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1667_2323.log
== TEST (2019-04-16 16:05:17) 
-- CODE:
var=float(input("nome do bruxo:").upper()
if(var=="SIRIUS"):
	print(15.7654/1.3479)
-- ERROR:
File "XXXX", line 2
    if(var=="SIRIUS"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:05:28) 
-- CODE:
var=float(input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
-- ERROR:
File "XXXX", line 2
    if(var=="SIRIUS"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:05:51) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
-- ERROR:
File "XXXX", line 2
    if(var=="SIRIUS"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:52) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY")
	print(7.674/3.789)
-- ERROR:
File "XXXX", line 4
    if(var=="MALFOY")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:56) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:07:02) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- EXECUTION TIME:
0.139433
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:11) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:32) 
-- CODE:
var=input("nome do bruxo:")
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:56) 
-- CODE:
var=input("nome do bruxo:").upper()
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:09:02) 
-- CODE:
var=input("nome do bruxo:").upper()
if(var=="SIRIUS"):
	print(15.7654/1.3479)
if(var=="MALFOY"):
	print(7.674/3.789)
-- EXECUTION TIME:
0.200236
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
